# agent-skills-manager

./: .gitignore  README.md  pyproject.toml
agent_skills_manager/: __init__.py  cli.py  commands.py  config.py  fsutil.py  gitutil.py  gui.py  skills.py  sync.py  tui.py  validate.py
agent_skills_manager/qtgui/: __init__.py  app.py  main_window.py  models.py  services.py  theme.py  workers.py
agent_skills_manager/qtgui/pages/: __init__.py  backups.py  base.py  compare.py  diff.py  logs.py  overview.py  settings.py  sync.py  targets.py  validate.py
agent_skills_manager/qtgui/resources/: style.qss
agent_skills_manager/qtgui/widgets/: __init__.py  confirm_dialogs.py  log_view.py  path_picker.py  status_badge.py
docs/: commands.md  configuration.md  platforms.md
scripts/: pull-agent-skills  push-agent-skills
tests/: test_cli_gui.py  test_cli_interrupt.py  test_cli_management_features.py  test_cli_path_completion.py  test_cli_public_release.py  test_cli_push_branch.py  test_cli_scan.py  test_cli_status.py  test_cli_validate.py  test_qt_gui_entry.py  test_qt_services.py
