[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skills-manager"
version = "0.1.0"
description = "CLI and GUI helper for configuring, scanning, pushing, and pulling private AI agent skill repositories."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Leo"}]
dependencies = []

[project.optional-dependencies]
# The optional Qt desktop GUI. The CLI itself stays standard-library-only;
# PySide6 is only needed for `agent-skills gui`.
# Install with: python3 -m pip install -e ".[qt]"
qt = [
    "PySide6>=6.6",
]
# Contributor tooling only; the runtime stays standard-library-only.
# Install with: python3 -m pip install -e ".[dev]"
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "build>=1.0",
]

[project.scripts]
agent-skills = "agent_skills_manager.cli:main"
askills = "agent_skills_manager.cli:main"

[project.urls]
Homepage = "https://github.com/leoliao0606-creator/agent-skills-manager"
Repository = "https://github.com/leoliao0606-creator/agent-skills-manager.git"
Issues = "https://github.com/leoliao0606-creator/agent-skills-manager/issues"

[tool.setuptools]
packages = [
    "agent_skills_manager",
    "agent_skills_manager.qtgui",
    "agent_skills_manager.qtgui.pages",
    "agent_skills_manager.qtgui.widgets",
]

[tool.setuptools.package-data]
"agent_skills_manager.qtgui" = ["resources/*.qss", "resources/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
# Long descriptive lines (help text, plan dicts) are intentional in this CLI.
ignore = ["E501"]
